--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.synalice</groupId>
-    <artifactId>ConsoleInterfaceGenerator</artifactId>
+    <artifactId>ConIntGen</artifactId>
     <version>1.0.0</version>
 
     <dependencies>
@@ -22,4 +22,12 @@
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub synalice Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/synalice/ConIntGen</url>
+        </repository>
+    </distributionManagement>
 </project>
