--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.synalice</groupId>
-    <artifactId>ConIntGen</artifactId>
+    <artifactId>conintgen</artifactId>
     <version>1.0.0</version>
 
     <dependencies>
